--- a/k8s/quiz.yaml
+++ b/k8s/quiz.yaml
@@ -30,6 +30,7 @@ spec:
       containers:
       - name: quiz
         image: dremer10/quiz-terminal:test
+        imagePullPolicy: Always
         ports:
         - containerPort: 7681
           name: ws
